packages/game/src/snapshots/game__update_test__update_test-2.snap
---
source: src/lib.rs
expression: state.finalize()
---
FinalizedGameState {
    cells: [
        (
            Address {
                x: 7,
                y: 68,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 13,
                y: 45,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 61,
                y: 13,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 3,
                y: 51,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 70,
                y: 39,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 45,
                y: 5,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 82,
                y: 43,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 62,
                y: 42,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 15,
                y: 90,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 69,
                y: 17,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 78,
                y: 19,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 9,
                y: 61,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 90,
                y: 37,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 2,
                y: 80,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                    RelativePath {
                        x: 1,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 73,
                y: 13,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 99,
                y: 67,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 93,
                y: 64,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 86,
                y: 20,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 34,
                y: 11,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 39,
                y: 11,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 3,
                y: 95,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 96,
                y: 70,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 51,
                y: 70,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 57,
                y: 35,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 58,
                y: 43,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 40,
                y: 68,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 7,
                y: 98,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: -1,
                        y: 0,
                    },
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 12,
                y: 40,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                    RelativePath {
                        x: 1,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 33,
                y: 10,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 82,
                y: 35,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
    ],
}
