packages/game/src/snapshots/game__update_test__update_test-3.snap
---
source: src/lib.rs
expression: state.finalize()
---
FinalizedGameState {
    cells: [
        (
            Address {
                x: 0,
                y: 0,
            },
            Unit {
                order: Some(
                    Stop,
                ),
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
            },
        ),
        (
            Address {
                x: -10,
                y: 13,
            },
            Unit {
                order: None,
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
            },
        ),
        (
            Address {
                x: -6,
                y: 24,
            },
            Unit {
                order: None,
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
            },
        ),
        (
            Address {
                x: 54,
                y: 42,
            },
            Unit {
                order: None,
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
            },
        ),
    ],
}
