packages/game/src/snapshots/game__update_test__update_test.snap
---
source: src/lib.rs
expression: state.finalize()
---
FinalizedGameState {
    cells: [
        (
            Address {
                x: 7,
                y: 67,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 14,
                y: 42,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 7,
                y: 47,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                    RelativePath {
                        x: 1,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 69,
                y: 39,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                    RelativePath {
                        x: 1,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 82,
                y: 46,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 61,
                y: 41,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: -1,
                        y: 0,
                    },
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 16,
                y: 90,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 70,
                y: 20,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 76,
                y: 19,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 9,
                y: 59,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 44,
                y: 5,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 90,
                y: 38,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 40,
                y: 45,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 94,
                y: 75,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 78,
                y: 7,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 93,
                y: -1,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 74,
                y: 15,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 43,
                y: 65,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 59,
                y: 93,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 29,
                y: 75,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 76,
                y: 14,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 50,
                y: 72,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 84,
                y: 85,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 16,
                y: 40,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 13,
                y: 61,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 61,
                y: 13,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 46,
                y: 19,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                    RelativePath {
                        x: 1,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 48,
                y: 23,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                    RelativePath {
                        x: 0,
                        y: 1,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 27,
                y: 76,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 18,
                y: 54,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
        (
            Address {
                x: 45,
                y: 4,
            },
            Unit {
                pathes: {
                    RelativePath {
                        x: 0,
                        y: 0,
                    },
                },
                blueprint: {},
            },
        ),
    ],
}
